--- a/hexer.cabal
+++ b/hexer.cabal
@@ -85,7 +85,8 @@ executable hexer
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+        Lexer
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -93,15 +94,25 @@ executable hexer
     -- Other library packages from which modules are imported.
     build-depends:
         base ^>=4.16.2.0,
+        bytestring,
         extra,
+        flatparse,
         ghc-lib-parser,
         ghc-prim,
         hexer,
         haskell-src,
         hlint,
+        template-haskell,
 
     -- Directories containing source files.
     hs-source-dirs:   app
+
+    default-extensions:
+        BlockArguments
+        LambdaCase
+        OverloadedStrings
+        PackageImports
+        TemplateHaskell
 
     -- Base language which the package is written in.
     default-language: Haskell2010
