--- a/hexer.cabal
+++ b/hexer.cabal
@@ -87,6 +87,7 @@ executable hexer
     -- Modules included in this executable, other than Main.
     other-modules:
         Lexer
+        Show
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
